--- a/time-machines.cabal
+++ b/time-machines.cabal
@@ -26,12 +26,15 @@ common common-options
   ghc-options:
     -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
     -Wincomplete-record-updates -Wredundant-constraints
-    -fhide-source-paths -Wpartial-fields
+    -fhide-source-paths
+    -- this is annoying because the book does it
+    -- -Wpartial-fields
 
 library
   import:          common-options
-  hs-source-dirs:  src
+  hs-source-dirs:  src, exercises
   exposed-modules: Lib
+  other-modules: Chapter3
   build-depends:
     , containers
     , mtl
